--- a/css/variables.css
+++ b/css/variables.css
@@ -6,5 +6,6 @@
     --pale_orange: #f0a53c61;
     --white: #fff;
     --pinkish: #f03c3c;
-    --font_family: Palatino, Verdana, sans-serif
+    --active-colour: #f0a53cbb;
+    --font_family: Palatino, Verdana, sans-serif;
 }
