--- a/css/fonts.css
+++ b/css/fonts.css
@@ -49,7 +49,8 @@ a.nav-gamespage {
 a.nav-gamespage,
 input,
 textarea,
-label {
+label,
+nav a {
     font-size: larger;
 }
 
@@ -60,13 +61,16 @@ label {
 
 .game-link,
 .h1heading,
-.h1heading-homepage {
+.h1heading-homepage,
+.h1heading-gamespage,
+.h2-title-index-page {
     font-size: xx-large;
 }
 
 #first-section-text,
 #about-info-text,
-.shopping-cart {
+.shopping-cart,
+.game-text {
     font-size: large;
 }
 
