--- a/css/styles.css
+++ b/css/styles.css
@@ -74,8 +74,7 @@ body {
 .topbar-homepage,
 .topbar-contactpage,
 .topbar-about,
-.h1heading,
-.h1heading-gamespage {
+.h1heading {
     background-color: var(--pale_blue);
 }
 
@@ -290,6 +289,8 @@ li.nav-gamespage {
     align-items: center;
     flex-direction: column;
     margin-top: 5%;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
 }
 
 .genre-container {
@@ -299,8 +300,8 @@ li.nav-gamespage {
 
 .h2-title-games-page {
     margin-left: 50px;
-    margin-bottom: 700px;
-    background-color: var(--pale_blue);
+    margin-bottom: 650px;
+    background-color: var(--pale_orange);
     padding: 20px 100px;
 }
 
